# antimicrox

./: AGENTS.md  CMakeLists.txt  CODEX_HANDOFF_WINDOWS_UAC_BUGS.md  README.md
other/: io.github.antimicrox.antimicrox.desktop
share/antimicrox/translations/: antimicrox_ja.ts
src/: applaunchhelper.cpp  autoprofilewatcher.cpp  autoprofilewatcher.h  gamecontrollerexample.h  inputdaemon.cpp  inputdaemon.h  inputdevice.cpp  inputdevice.h  joycontrolstickstatusbox.h  localantimicroserver.cpp  localantimicroserver.h  main.cpp  mouseinputselection.cpp  mouseinputselection.h  winextras.cpp  winextras.h  xmlconfigreader.cpp
src/eventhandlers/: winsendinputeventhandler.cpp
src/gamecontroller/: gamecontrollertrigger.h
src/gui/: aboutdialog.h  addeditautoprofiledialog.cpp  addeditautoprofiledialog.h  addeditautoprofiledialog.ui  axisvaluebox.h  buttoneditdialog.h  editalldefaultautoprofiledialog.h  flashbuttonwidget.h  joybuttonmousehelper.cpp  joytabwidget.cpp  joytabwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qkeydisplaydialog.h  simplekeygrabberbutton.h  slotitemlistwidget.h  winappprofiletimerdialog.cpp  winappprofiletimerdialog.ui
src/joybuttontypes/: joybutton.cpp  joybutton.h
src/keyboard/: virtualkeyboardmousewidget.h
src/sensors/: joygyroscopesensor.h  joysensorpushbutton.cpp
tests/: CMakeLists.txt  mouse-input-combination.tdd.md  testmouseinputselection.cpp
